# playwright-mcp

./: .env.example  .gitignore  Dockerfile  README.md  index.js  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  run.py  server.mjs  server.py  setup.py  start.sh
