# Playwright MCP Server — Python Edition
# Agent kết nối MCP qua stdio, quản lý browser + session

[project]
name = "playwright-mcp"
version = "1.0.0"
description = "Playwright MCP Server — Multi-browser automation cho AI Agent"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.55.0",
    "pydantic>=2.0.0",
]

[project.scripts]
playwright-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
